WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
271896
AX: Accessibility should not use deprecatedIsSpaceOrNewline
https://bugs.webkit.org/show_bug.cgi?id=271896
Summary
AX: Accessibility should not use deprecatedIsSpaceOrNewline
Tyler Wilcock
Reported
2024-03-29 11:24:10 PDT
Critically, this function does not include handling non-breaking space characters.
Attachments
Patch
(7.17 KB, patch)
2024-03-29 11:26 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-03-29 11:24:19 PDT
<
rdar://problem/125621747
>
Tyler Wilcock
Comment 2
2024-03-29 11:26:15 PDT
Created
attachment 470664
[details]
Patch
chris fleizach
Comment 3
2024-03-29 14:03:20 PDT
Comment on
attachment 470664
[details]
Patch beautiful!
EWS
Comment 4
2024-03-29 15:10:28 PDT
Committed
276843@main
(8906cfaf11f8): <
https://commits.webkit.org/276843@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 470664
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug