AX: Accessibility should not use deprecatedIsSpaceOrNewline https://bugs.webkit.org/show_bug.cgi?id=271896 rdar://problem/125621747

Reviewed by Chris Fleizach.

Critically, this function does not include handling non-breaking space characters.

Fixing this allows us to pass 5 more WPT subtests in comp_text_node.html.

* LayoutTests/imported/w3c/web-platform-tests/accname/name/comp_text_node-expected.txt:
* Source/WebCore/accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::computeAccessibilityIsIgnored const):
(WebCore::AccessibilityNodeObject::textAsLabelFor const):
(WebCore::AccessibilityNodeObject::textUnderElement const):
(WebCore::accessibleNameForNode):
* Source/WebCore/accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::stringForRange const):

Canonical link: https://commits.webkit.org/276843@main